--- a/crates/local_cache/Cargo.toml
+++ b/crates/local_cache/Cargo.toml
@@ -13,3 +13,4 @@ chrono = { version = "0.4", features = ["serde"] }
 heed = "0.22"
 serde.workspace = true
 serde_json.workspace = true
+uuid = { version = "1", features = ["v4"] }
